# proyecto-algoritmos

./: LICENSE.txt  README.md  pyproject.toml
src/proyecto_algoritmos/: DB_writer_reader.py  __about__.py  __init__.py  business_logic.py  gui.py  main.py  odoo.py  screen_manager.py
tests/: business_logic_test.py  db_writer_reader_test.py
